[tool.poetry]
name = "telegram-logseq"
version = "0.1.0"
description = "Telegram to Logseq 同步机器人"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^20.8"
pydantic = "^2.6"
pydantic-settings = "^2.2"
loguru = "^0.7.2"
aiohttp = "^3.9.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
black = "^24.2"
ruff = "^0.3.0"
mypy = "^1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 